--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="menu_my_statistics">Mes statistiques</string>
     <string name="logout">Se déconnecter</string>
     <string name="indentity">Identité</string>
+
+    <string name="search">Recherche</string>
+    <string name="old_testament">Ancien testament</string>
+    <string name="new_testament">Nouveau testament</string>
+
+    <string name="nb_book">%d livres</string>
 </resources>
