--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="menu_my_statistics">Mes statistiques</string>
     <string name="logout">Se déconnecter</string>
     <string name="indentity">Identité</string>
+    <string name="login">Se connecter</string>
+    <string name="via_google">via Google+</string>
+    <string name="via_facebook">via Facebook</string>
 
     <string name="search">Recherche</string>
     <string name="old_testament">Ancien testament</string>
