--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- menu -->
     <string name="menu_bible">Bible</string>
     <string name="menu_my_verse">Mes versets</string>
-    <string name="menu_my_comments">Mes commentaires</string>
+    <string name="menu_comments">Commentaires</string>
     <string name="menu_my_statistics">Mes statistiques</string>
     <string name="logout">Se déconnecter</string>
     <string name="indentity">Identité</string>
