--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <string name="nb_book">%d livres</string>
     <string name="anonyme">Anonyme</string>
+    <string name="search_result">Résultats de recherche</string>
 
     <plurals name="nb_results">
         <item quantity="zero">%d résultat</item>
